--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl:
 
 # Site Settings
 title: James Weakley
-description: "Timeline is multipurpose, single page Jekyll theme that includes a timeline section."
+description: "The personal timeline of James Weakley."
 keywords: "jekyll, theme"
 google-tracking-id:
 
